--- a/PostgreSqlInAString/PostgreSqlInAString.csproj
+++ b/PostgreSqlInAString/PostgreSqlInAString.csproj
@@ -87,6 +87,9 @@
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="17.7.2196" />
+    <PackageReference Include="Microsoft.VSSDK.Vsixsigntool">
+      <Version>16.2.29116.78</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.png">
@@ -100,11 +103,23 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
+  <Target Name="SignVsix" AfterTargets="CreateVsixContainer" Condition="'$(Configuration)' == 'Release' And Exists('$(OSS_CERT)') And '$(OSS_CERT_PASS)' != '' And '$(OSS_CERT_HASH)' != ''">
+    <ItemGroup>
+      <VsixSignPackage Include="$(NuGetPackageRoot)microsoft.vssdk.vsixsigntool\*\tools\vssdk\vsixsigntool.exe"/>
+    </ItemGroup>
+	
+    <PropertyGroup>
+      <VsixSignTool>@(VsixSignPackage->'%(fullpath)')</VsixSignTool>
+      <VsixSignCommand>$(VsixSignTool) sign /f $(OSS_CERT) /p $(OSS_CERT_PASS) /sha1 $(OSS_CERT_HASH) /fd sha256 /tr http://timestamp.digicert.com /td sha256 /v</VsixSignCommand>
+      <VsixSignVerifyCommand>"$(VsixSignTool)" verify /f $(OSS_CERT) /p $(OSS_CERT_PASS) /sha1 $(OSS_CERT_HASH) /q</VsixSignVerifyCommand>
+    </PropertyGroup>
+    
+    <Exec Command="$(VsixSignVerifyCommand) $(TargetVsixContainer)" IgnoreExitCode="true">
+      <Output TaskParameter="ExitCode" PropertyName="VsixSignVerifyExitCode" />
+    </Exec>
+    
+	<Message Text="Skipping file $(TargetVsixContainer) because it is already signed." Importance="high" Condition="$(VsixSignVerifyExitCode) == 0" />
+    <Message Text="Signing $(TargetVsixContainer)" Importance="high" Condition="$(VsixSignVerifyExitCode) != 0" />
+    <Exec Command="$(VsixSignCommand) $(TargetVsixContainer)" Condition="$(VsixSignVerifyExitCode) != 0" />
   </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
