--- a/PostgreSqlInAString/PostgreSqlInAString.csproj
+++ b/PostgreSqlInAString/PostgreSqlInAString.csproj
@@ -4,6 +4,24 @@
     <MinimumVisualStudioVersion>17.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>7.3</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -107,17 +125,14 @@
     <ItemGroup>
       <VsixSignPackage Include="$(NuGetPackageRoot)microsoft.vssdk.vsixsigntool\*\tools\vssdk\vsixsigntool.exe" />
     </ItemGroup>
-    
     <PropertyGroup>
       <VsixSignTool>@(VsixSignPackage->'%(fullpath)')</VsixSignTool>
       <VsixSignCommand>$(VsixSignTool) sign /f $(OSS_CERT) /p $(OSS_CERT_PASS) /sha1 $(OSS_CERT_HASH) /fd sha256 /tr http://timestamp.digicert.com /td sha256 /v</VsixSignCommand>
       <VsixSignVerifyCommand>"$(VsixSignTool)" verify /f $(OSS_CERT) /p $(OSS_CERT_PASS) /sha1 $(OSS_CERT_HASH) /q</VsixSignVerifyCommand>
     </PropertyGroup>
-    
     <Exec Command="$(VsixSignVerifyCommand) $(TargetVsixContainer)" IgnoreExitCode="true">
       <Output TaskParameter="ExitCode" PropertyName="VsixSignVerifyExitCode" />
     </Exec>
-    
     <Message Text="Skipping file $(TargetVsixContainer) because it is already signed." Importance="high" Condition="$(VsixSignVerifyExitCode) == 0" />
     <Message Text="Signing $(TargetVsixContainer)" Importance="high" Condition="$(VsixSignVerifyExitCode) != 0" />
     <Exec Command="$(VsixSignCommand) $(TargetVsixContainer)" Condition="$(VsixSignVerifyExitCode) != 0" />
