workaround for VS 17.9 breaking change - use IViewTaggerProvider instead of ITaggerProvider

--- a/PostgreSqlInAString/PostgreSqlInAString.csproj
+++ b/PostgreSqlInAString/PostgreSqlInAString.csproj
@@ -63,9 +63,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ClassificationTypeName.cs" />
     <Compile Include="Lexer\PostgreSqlLexer.cs" />
     <Compile Include="Lexer\PostgreSqlLexerBase.cs" />
     <Compile Include="Lexer\TokenCategorizer.cs" />
+    <Compile Include="LinqExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlTokenCategory.cs" />
     <Compile Include="StringType.cs" />
