--- a/PostgreSqlInAString/PostgreSqlInAString.csproj
+++ b/PostgreSqlInAString/PostgreSqlInAString.csproj
@@ -123,7 +123,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Target Name="SignVsix" AfterTargets="CreateVsixContainer" Condition="'$(Configuration)' == 'Release' And Exists('$(OSS_CERT)') And '$(OSS_CERT_PASS)' != '' And '$(OSS_CERT_HASH)' != ''">
+  <!--<Target Name="SignVsix" AfterTargets="CreateVsixContainer" Condition="'$(Configuration)' == 'Release' And Exists('$(OSS_CERT)') And '$(OSS_CERT_PASS)' != '' And '$(OSS_CERT_HASH)' != ''">
     <ItemGroup>
       <VsixSignPackage Include="$(NuGetPackageRoot)microsoft.vssdk.vsixsigntool\*\tools\vssdk\vsixsigntool.exe" />
     </ItemGroup>
@@ -138,5 +138,5 @@
     <Message Text="Skipping file $(TargetVsixContainer) because it is already signed." Importance="high" Condition="$(VsixSignVerifyExitCode) == 0" />
     <Message Text="Signing $(TargetVsixContainer)" Importance="high" Condition="$(VsixSignVerifyExitCode) != 0" />
     <Exec Command="$(VsixSignCommand) $(TargetVsixContainer)" Condition="$(VsixSignVerifyExitCode) != 0" />
-  </Target>
+  </Target>-->
 </Project>
